Update and rename indeks.html to index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 	<h1 class="menu">MENU</h1>
 	<ul class="border">
-		<li class="list"><a href="grid/index.html" class="link">CSS GRID</a></li>
-		<li class="list"><a href="css_grid_website/layout_01/index.html" class="link">LAYOUT 01</a></li>
-		<li class="list"><a href="#" class="link">UNDER PROCESS</a></li>
+		<li class="list"><a href="grid/index.html" class="link">GALLERY</a></li>
+		<li class="list"><a href="css_grid_website/layout_01/index.html" class="link">LP01</a></li>
+		<li class="list"><a href="css_grid_website/layout_02/index.html" class="link">LP02</a></li>
 	</ul>
 </body>
 </html>
